# sfml_example

./: Cargo.toml  fragment.glsl  text.glsl  vertex.glsl
res/glsl/: text.glsl  tile.glsl
src/: app_gl.rs  main.rs  util.rs
