[package]
name = "sfml_example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sfml = "0.16.0"
gl = "0.14.0"
gl_loader = "0.1.2"
nalgebra-glm = "0.15.0"
serde = "1.0.130"
serde_json = "1.0.70"
reqwest = { version = "0.11.6", features = ["json", "blocking"] }
lazy_static = "1.4.0"
freetype-rs = "0.28.0"
itertools = "0.8.2"
num_cpus = "1.13.0"
